err/covermi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/covermi'...
Compiling './lib/python3.5/site-packages/covermi/bringmiup.py'...
***   File "./lib/python3.5/site-packages/covermi/bringmiup.py", line 8
    print "BringMiUp"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/covermi/cosmic2variants.py'...
***   File "./lib/python3.5/site-packages/covermi/cosmic2variants.py", line 24
    print "Please select the COSMIC mutation tsv file"
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/covermi/covermicompare.py'...
***   File "./lib/python3.5/site-packages/covermi/covermicompare.py", line 175
    print "Processing..."
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/covermi/covermimain.py'...
***   File "./lib/python3.5/site-packages/covermi/covermimain.py", line 75
    print "CoverMi v{}".format(__version__)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/covermi/covermiverifygui.py'...
***   File "./lib/python3.5/site-packages/covermi/covermiverifygui.py", line 19
    print "CoverMi version {}".format(version)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/covermi/covermiwgsmain.py'...
***   File "./lib/python3.5/site-packages/covermi/covermiwgsmain.py", line 25
    print "Processing..."
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/covermi/familycheck.py'...
***   File "./lib/python3.5/site-packages/covermi/familycheck.py", line 22
    print "proband: {}".format(os.path.basename(probandpath))
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/covermi/make_canonical.py'...
***   File "./lib/python3.5/site-packages/covermi/make_canonical.py", line 38
    print "Written file {}".format(path)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/covermi/panel.py'...
***   File "./lib/python3.5/site-packages/covermi/panel.py", line 122
    if self._verbose: print "Loading manifest file: {0}".format(self.file_names["Manifest"])
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/covermi/whosthedaddy.py'...
***   File "./lib/python3.5/site-packages/covermi/whosthedaddy.py", line 24
    print "proband: {}".format(os.path.basename(probandpath))
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/covermi-2.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
